--- a/view/lunch_view.xml
+++ b/view/lunch_view.xml
@@ -1,6 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
 	<data>
+		<!-- Report Action -->
+		<report id="lunch_monthly_report_action" model="itbampa.lunch.report.wizard"
+			string="Monthly Lunch Report" report_type="qweb-html"
+			name="itbampa.lunch_monthly_report" file="itbampa.lunch_monthly_report"
+			attachment_use="False" attachment="'LunchMonthlyReport.pdf'"/>
+		<!-- Report Wizard -->
+		<record model="ir.ui.view" id="lunch_wizard_monthly_form_view">
+			<field name="name">Monthly Lunch Report Wizard</field>
+			<field name="model">itbampa.lunch.report.wizard</field>
+			<field name="arch" type="xml">
+				<form string="Monthly Lunch Report Wizard">
+					<group>
+						<p>
+							This Wizards lets you select the required School Calendar that
+							will be used to calculate monthly lunch attendance. You can get a
+							one-month report or a full session report, grouped by months.
+						</p>
+					</group>
+					<group col="4">
+						<field name="school_calendar_id" string="Session selected"></field>
+					</group>
+
+					<footer>
+						<button name="%(lunch_monthly_report_action)d" type="action"
+							string="Print Monthly Lunch Attendance" class="oe_highlight"></button>
+						<button name="print_monthly_report" type="object" string="Print Kaka" class="oe_highlight"></button>
+						<button special="cancel" string="Cancel"></button>
+					</footer>
+				</form>
+			</field>
+		</record>
+		<record id="lunch_monthly_report_wizard" model="ir.actions.act_window">
+			<field name="name">itbampa.lunch_monthly_report</field>
+			<field name="res_model">itbampa.lunch.report.wizard</field>
+			<field name="target">new</field>
+		</record>
+		<record model="ir.actions.act_window.view" id="lunch_monthly_report_wizard_form">
+			<field name="view_mode">form</field>
+			<field name="view_id" ref="lunch_wizard_monthly_form_view" />
+			<field name="act_window_id" ref="lunch_monthly_report_wizard" />
+		</record>
 		<!-- Lunch Daily Report -->
 		<report attachment="'LlistatMenjador'+object.date_start+'.pdf'"
 			attachment_use="False" id="report_lunch_event_pdf" model="itbampa.lunch.event"
@@ -40,10 +81,11 @@
 								<field class="oe_inline" name="name" readonly="1" />
 							</h1>
 						</div>
-						<div class="oe_button_box oe_right" name="buttons">
-							<button name="%(report_lunch_event_pdf)d" string="Print Lunch Event"
-								type="action" />
-							<button name="update_with_registered" string="Update With Registered Members" type="object"></button>
+						<div class="oe_right" name="buttons">
+							<button name="%(report_lunch_event_pdf)d" string="Attendance"
+								type="action" class="fa fa-check-square-o" />
+							<button name="update_with_registered" string="Update Members"
+								type="object" class="fa fa-users"></button>
 						</div>
 						<separator string="General Info"></separator>
 						<group col="4">
@@ -108,5 +150,7 @@
 		<!-- Lunch Menu -->
 		<menuitem action="action_itbampa_lunchs" id="menu_itbampa_mngt_lunchs"
 			name="Lunchs" parent="menu_itbampa_mgnt" sequence="30" />
+		<menuitem action="lunch_monthly_report_wizard" id="menu_itbampa_report_monthly"
+			name="Lunch Monthly Report" parent="menu_itbampa_report" sequence="10" />
 	</data>
 </openerp>
